@@ -1,9 +1,10 @@
 # -*- coding: latin-1 -*-
 
 """
-nmap.py - v0.1.0 - 2010.03.06
+nmap.py - v0.1.3 - 2010.06.07
 
 Author : Alexandre Norman - norman@xael.org
+Contributor: Steve 'Ashcrow' Milner - steve@gnulinux.net
 Licence : GPL v3 or any later version
 
 
@@ -54,6 +55,6 @@ u'open'
 
 
 __author__ = 'Alexandre Norman (norman@xael.org)'
-__version__ = '0.1.1'
+__version__ = '0.1.3'
 
 from nmap import *
