@@ -1,10 +1,18 @@
 Changelog
 =========
 
+2010/06/07
+Patches from Steve 'Ashcrow' Milner <steve@gnulinux.net>
+ - remove shebang from __init__.py as it is not a runnable script
+ - allow use with ALPHA and BETA nmap releases
+ - .has_key() is deprecated, replaced instances with in
+ - move to using the print function for python2 and 3 usag
+
+
 2010/06/04
  - adding PortScanner.listscan
  - PortScanner.scan now returns scan_result
- - adding class PortScannerAsync
+ - adding class PortScannerAsync (idea from Steve 'Ashcrow' Milner <steve@gnulinux.net>)
 
 2010/06/03
  - Import on google code
